fix scrollbar, better monospace image

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -6,16 +6,10 @@ body {
 }
 
 #app {
-  width: 1000px;
   height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
-  margin: 0 30px;
-}
-
-.view {
-  max-height: 100vh;
-  overflow-y: auto;
 }
 
 p {
